CSS/index.css
header {
  background-image: url(../Images/backgrounds/landing.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}
body {
  background-color: white;
}

#headertext {
  font-size: 3.3em;
  text-align: center;
  color: white;
  padding-bottom: 80px;
  padding-top: 10px;
  margin-bottom: auto;
}
#logo1 {
  height: 20%;
  width: 20%;
  display: block;
  margin-right: auto;
  margin-left: auto;
  margin-top: auto;
  margin-bottom: auto;
  padding-top: 100px;
}
.times {
  display: flex;
  flex-direction: row;
  height: 210px;
  width: 100%;
}
.happy {
  height: 210px;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.meals {
  height: 210px;
  display: flex;
  flex-direction: row;
  flex-grow: 3;
}
#happy {
  color: black;
  font-size: 25px;
  height: 50%;
  background-color: whitesmoke;
  text-align: center;
  vertical-align: middle;
  line-height: 105px;
}

#party {
  color: white;
  font-size: 25px;
  height: 50%;
  background-color: #f15a29;
  text-align: center;
  vertical-align: middle;
  line-height: 105px;
}
#breakfast {
  background-image: url(../Images/foodtop/breakfast.jpg);
  color: white;
  font-style: italic;
  font-size: 25px;
  width: 33.33%;
  text-align: center;
  vertical-align: middle;
  line-height: 210px;
}

#lunch {
  background-image: url(../Images/foodtop/lunch.jpg);
  color: white;
  font-style: italic;
  font-size: 25px;
  width: 33.33%;
  text-align: center;
  vertical-align: middle;
  line-height: 210px;
}

#dinner {
  background-image: url(../Images/foodtop/dinner.jpg);
  color: white;
  font-style: italic;
  font-size: 25px;
  width: 33.33%;
  text-align: center;
  vertical-align: middle;
  line-height: 210px;
}

#dinner:hover {
  background-image: url(../Images/foodtop/dinner2.jpg);
}
.fastfood {
  margin-top: 150px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 50%;
  width: 100%;
}

.fastimages {
  height: 100%;
  width: ;
  display: flex;
  flex-direction: column;
  border: white solid 1px;
  box-sizing: content-box;
  box-shadow: 5px 5px 5px 5px lightgray;
  margin: 0 80px 0 0;
}
.fasttext {
  height: 100%;
  width: 600px;
  display: flex;
  flex-direction: column;
  text-align: left;
}
#fast1 {
  padding: 20px 20px 0 20px;
}
#fast2 {
  padding: 0 20px 20px 20px;
}
#title {
  font-size: 50px;
  color: rgb(59, 57, 57);
}
#tag {
  font-size: 30px;
  color: rgb(59, 57, 57);
}
#brief {
  font-size: 25px;
  color: rgb(59, 57, 57);
  display: inline-block;
}
#gallery {
  color: #f15a29;
  border: #f15a29 1px solid;
  width: 250px;
  height: 50px;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
.foodtag {
  height: 60px;
}
.foodtitle {
  height: 100px;
}
.foodbrief {
  height: 180px;
}
#gallery:hover {
  background-color: #f15a29;
  color: white;
}

.drinks {
  margin-top: 150px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 50%;
  width: 100%;
}

.drinksimages {
  height: 100%;
  width: 527px;
  display: flex;
  flex-direction: row;
  border: white solid 1px;
  box-sizing: content-box;
  box-shadow: 5px 5px 5px 5px lightgray;
  margin: 0 0 0 80px;
}
.drinkstext {
  height: 100%;
  width: 600px;
  display: flex;
  flex-direction: column;
  text-align: right;
}
#drink1 {
  padding: 20px 0 20px 20px;
}
#drink2 {
  padding: 20px 20px 20px 0;
}
#dtitle {
  font-size: 50px;
  color: rgb(59, 57, 57);
}
#dtag {
  font-size: 30px;
  color: rgb(59, 57, 57);
}
#dbrief {
  font-size: 25px;
  color: rgb(59, 57, 57);
  display: block;
}
#ddrinks {
  color: #f15a29;
  border: #f15a29 1px solid;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
.drinkstag {
  height: 60px;
}
.drinkstitle {
  height: 100px;
}
.drinksbrief {
  height: 180px;
}
#ddrinks:hover {
  background-color: #f15a29;
  color: white;
}
.viewdrinks {
  padding-left: 350px;
}
.menuback {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../Images/backgrounds/foodsBg.jpg);
  background-repeat: no-repeat;
  margin-top: 150px;
  background-size: cover;
  height: 599px;
}

.menu {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 400px;
  width: 60%;
  background-color: white;
  margin: auto;
}
.menutabs {
  display: flex;
  flex-direction: row;
  height: 65px;
  width: 100%;
  justify-content: center;
  font-size: large;
}
#tab1 {
  border: solid 1px black;
  flex-grow: 1;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
#tab2 {
  border: 1px solid black;
  flex-grow: 1;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
#tab3 {
  border: 1px solid black;
  flex-grow: 1;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
#tab4 {
  border: 1px solid black;
  flex-grow: 1;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
}
.menufoods {
  color: #f15a29;
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-around;
  text-align: center;
  align-items: center;
  padding: 0 0 20px 0;
}
.review {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60%;
  height: 40%;
  margin: 150px auto 150px auto;
  border: whitesmoke 2px solid;
  box-shadow: 5px 5px 5px 5px lightgray;
}
.customers {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 66.66%;
}
.aboutmenu {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 33.33%;
}
.heads {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

footer {
  background-color: #f15a29;
  width: 100%;
  height: 301px;
}
.subscribe {
  background-image: url(../Images/backgrounds/subscribe.jpg);
  background-repeat: no-repeat;
  margin-top: 150px;
  background-size: cover;
  width: 100%;
  height: 301px;
 }

